--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-"Poluição é uma palavra originada do latim, que significa manchar, poluir. São poluentes como substâncias, resíduos ou sons que estão em excesso no ambiente, causando desconforto, doenças, estresse, diminuição da qualidade de vida, do ar, das águas, ou seja, do ambiente em geral, além de provocar sérias ameaças de extinção para os seres vivos."
+<h1>Os efeitos da poluição sonora</h1>
+<p>no organismo são muitos e<strong> dependem do tempo de exposição, da intensidade sonora</strong> e da suscetibilidade de cada indivíduo.</p>
+ <p> Pode ocorrer perda auditiva temporária ou permanente, zumbido, intolerância a sons, estresse, ansiedade, 
+ dores de cabeça, problemas circulatórios, tonturas, taquicardia, alterações do sono e apetite, liberação de hormônios, insônia.</p>
+  <p><em>Por isso, é bom evitar ouvir sons muito altos,<strong> pois nossos ouvidos necessitam de repouso e descanso</strong>.</em></p>
+  
 
-Veja mais sobre "Poluição sonora " em: https://brasilescola.uol.com.br/biologia/poluicao-sonora.htm
